// 逻辑包名
package protobuf;
// 指定在当前目录下生成的包名
option java_package = "com.ava.bigdata.common.serializer.protobuf";
// 指定主类名
option java_outer_classname = "AddressBookProtos";
// 为false表示message中定义的实体类和主类一起放在一个大类中(默认)，否则创建出多个.java文件
option java_multiple_files = false;
// 基础定义，类似于java中的实体类
// Prefer optional fields than required
message Person {
    // 字段index最小值为1，最大值为2^29 - 1，其中[19000, 19999]为protobuf中的预留索引，不可使用
    required string name = 1;
    required int32 id = 2;
    // optional 表示字段可选
    optional string email = 3;
    enum PhoneType {
        // 枚举类型的最小值0
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }
    // 在Person中定义内部类
    message PhoneNumber {
        required string number = 1;
        optional PhoneType type = 2 [default = HOME];
    }
    // repeated is used to defined a List
    repeated PhoneNumber phone = 4;
}

message AddressBook {
    repeated Person person = 1;
    // 指定拓展中的float只能为100 to 199
    extensions 100 to 199;
}

// 为message AddressBook的拓展
extend AddressBook {
    optional float price = 100;
}
